# example-hub

./: README.md  package-lock.json  pnpm-lock.yaml
python/ai-wallet-reputation-nft/: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
python/ai-wallet-reputation-nft/contracts/: ReputationBadge.abi.json  ReputationBadge.sol
python/ai-wallet-reputation-nft/src/: analyzer.py  app.py  contract_interaction.py
python/ai-wallet-reputation-nft/src/templates/: index.html
typescript/4everland-hosting-mcp/: README.md  package.json  tsconfig.json
typescript/4everland-hosting-mcp/src/: helper.ts  register.ts  server.ts
typescript/ai-trading-assistant/: .env.example  README.md  package.json  pnpm-lock.yaml
typescript/ai-trading-assistant/src/: README.md  client.ts
typescript/ai-trading-assistant/src/services/: analysisService.ts  coinGeckoService.ts  currentPriceService.ts  index.ts  swapService.ts  tradingAnalysisService.ts  tradingService.ts
typescript/ai-trading-assistant/src/types/: index.ts
typescript/bnb-faucet/: README.md  package-lock.json  package.json
typescript/bnb-faucet/app/: page.tsx
typescript/bnbchain-discord-notifications/: README.md
typescript/bnbchain-discord-notifications/smart-contract/: PingPong.sol
typescript/eliza-chatbot/: pnpm-lock.yaml
typescript/eliza-chatbot/src/: chat.ts  index.ts  util.ts
typescript/privy-MPC-wallet-contract-call/: README.md  package-lock.json  package.json
typescript/privy-MPC-wallet-contract-call/app/: layout.tsx  page.tsx
web/: list.json
(+13 files in other folders)
